APIの利用制限を超えないように改良

--- a/AutoQueryAssistant.ipynb
+++ b/AutoQueryAssistant.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvvCexAn7p0sbdIRFZkPMa",
+      "authorship_tag": "ABX9TyPaA5Hpr+1LjsD1WBrnrZ7s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,12 +89,78 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "APIの利用制限を超えないように改良"
+      ],
       "metadata": {
         "id": "ytBTm_QOtTQa"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "もちろんです、そのためにはAPIリクエストの速度を制御するためのロジックが必要です。Pythonの time モジュールを使って待機時間を設けることで、APIの利用制限を超えないようにすることができます。\n",
+        "\n",
+        "以下にそのような機能を追加したスクリプトの例を示します："
+      ],
+      "metadata": {
+        "id": "UiBs8F19wvny"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import openai\n",
+        "import time\n",
+        "\n",
+        "openai.api_key = 'your-api-key'\n",
+        "\n",
+        "# 貯めておいた質問や会話の断片のリスト\n",
+        "questions = [\"こんにちは、お元気ですか?\", \"明日の天気はどうですか?\", \"最新の科学技術ニュースを教えてください。\"]\n",
+        "\n",
+        "# APIのリクエストを送る間隔（秒）\n",
+        "# これはOpenAIの利用制限に適合するように調整する必要があります\n",
+        "wait_time = 1\n",
+        "\n",
+        "for question in questions:\n",
+        "    response = openai.ChatCompletion.create(\n",
+        "      model=\"gpt-4.5-turbo\",\n",
+        "      messages=[\n",
+        "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+        "            {\"role\": \"user\", \"content\": f\"{question}\"},\n",
+        "        ]\n",
+        "    )\n",
+        "    \n",
+        "    print(response['choices'][0]['message']['content'])\n",
+        "    \n",
+        "    # APIの利用制限を超えないように、次のリクエストまで待つ\n",
+        "    time.sleep(wait_time)\n"
+      ],
+      "metadata": {
+        "id": "SUxCaKl7wzB6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "このスクリプトは、各質問をGPT-4に投げた後に一定時間（この例では1秒）待機します。これにより、短期間に大量のリクエストを送ることによるAPIの利用制限の超過を防ぐことができます。\n",
+        "\n",
+        "ただし、この wait_time の値は、あなたのアカウントの利用制限によって異なる場合があります。具体的な制限は、OpenAIのウェブサイトやアカウント設定をご確認ください。必要に応じて、この値を調整してください。"
+      ],
+      "metadata": {
+        "id": "9D1Rr5azw4zJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "r2cUgVoDw8oe"
+      }
     }
   ]
 }
